[package]
name    = "api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common           = { path = "../common" }
graph-engine     = { path = "../graph-engine" }
postgres-store   = { path = "../postgres-store" }

tokio             = { workspace = true }
axum              = { workspace = true }
async-graphql     = { workspace = true }
async-graphql-axum = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
config            = { workspace = true }
